# SpellAbsorptionRework_DLL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
CMake/Scripts/: CMake-Copy-Archive.cmake  CMake-Copy-Artifacts.cmake  CMake-Copy-Scripts.cmake  CMake-Copy-Sources.cmake
CMake/ports/: .gitignore
Data/SKSE/Plugins/: MagicTweaks.ini
Data/SKSE/Plugins/MagicTweaks/: _defaultSettings.json
include/: API_ActorValueGenerator.h
src/Common/: PCH.h
src/Export/: SKSEPlugin.cpp
src/Hooks/: Hooks.cpp
src/Hooks/Fixes/: Fixes.cpp  Fixes.h
src/RE/: Misc.h  Offset.h
